--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,32 +1,53 @@
 <header>
-	   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-	     <div class="container">
-	       <a class="navbar-brand" href="/"><span>Bookers</span></a>
-	       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-	        <span class="navbar-toggler-icon"></span>
-	      </button>
-	      <div class="collapse navbar-collapse" id="navbarNavDropdown">
-	        <ul class="navbar-nav ml-auto">
-	           <li>
-	            <%= link_to root_path, class:"nav-link text-light" do%>
-	            <% end %>
-	           </li>
-	           <li>
-	            <%= link_to about_path, class:"nav-link text-light" do %>
-	            <% end %>
-	           </li>
-	           <li>
-	            <%= link_to new_user_registration_path, class:"nav-link text-light" do %>
-	             Sign up
-	            <% end %>
-	           </li>
-	           <li>
-	            <%= link_to new_user_session_path, class:"nav-link text-light" do %>
-	             Log in
-	            <% end %>
-	           </li>
-            </ul>
-           </div>
-         </div>
-      </nav>
- </header>
+	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+	<div class="container">
+		<a class="navbar-brand" href="/"><span>Bookers</span></a>
+		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+	</button>
+	<div class="collapse navbar-collapse" id="navbarNavDropdown">
+        <ul class="navbar-nav ml-auto">
+
+		<% if user_signed_in? %>
+			<li>
+				<%= link_to root_path, class:"nav-link text-light" do %>
+				Home
+				<% end %>
+            </li>
+            <li>
+				<%= link_to about_path, class:"nav-link text-light" do %>
+				About
+				<% end %>
+            </li>
+            <li>
+				<%= link_to "Log out", destroy_user_session_path, class:"nav-link text-light", method: :delete %>
+            </li>
+			<li>
+				<%= link_to root_path, class:"nav-link text-light" do %>
+				Home
+				<% end %>
+			</li>
+        <% else %>
+
+			
+			<li>
+				<%= link_to about_path, class:"nav-link text-light" do %>
+				About
+				<% end %>
+			</li>
+			<li>
+				<%= link_to new_user_registration_path, class:"nav-link text-light" do %>
+				Sign up
+				<% end %>
+			</li>
+			<li>
+				<%= link_to new_user_session_path, class:"nav-link text-light" do %>
+				Log in
+				<% end %>
+			</li>
+        </ul>
+		<% end %>
+		</div>
+	</div>
+	</nav>
+</header>
