--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -27,6 +27,9 @@
 				Home
 				<% end %>
 			</li>
+			<li>
+				<%= link_to "My Profile", user_path(current_user), class: "nav-link text-light" %>
+			</li>
         <% else %>
 
 			
