--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -15,20 +15,16 @@
 				<% end %>
             </li>
             <li>
-				<%= link_to about_path, class:"nav-link text-light" do %>
-				About
-				<% end %>
+				<%= link_to "New Post", new_post_path, class: "nav-link text-light" %>
             </li>
             <li>
 				<%= link_to "Log out", destroy_user_session_path, class:"nav-link text-light", method: :delete %>
             </li>
 			<li>
-				<%= link_to root_path, class:"nav-link text-light" do %>
-				Home
-				<% end %>
+				<%= link_to "My Profile", user_path(current_user), class: "nav-link text-light" %>
 			</li>
 			<li>
-				<%= link_to "My Profile", user_path(current_user), class: "nav-link text-light" %>
+				<%= link_to "Post Index", posts_path, class: "nav-link text-light" %>
 			</li>
         <% else %>
 
