--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -21,3 +21,5 @@
 
 <%= link_to 'Back', user_path(@user), class: 'btn btn-primary' %>
 <% end %>
+
+<%= link_to 'Delete Account', user_path(@user), method: :delete, data: { confirm: 'Are you sure you want to delete your account?' }, class: 'btn btn-danger' %>
