--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,7 +1,7 @@
 <header>
-	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+	<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
 	<div class="container">
-		<a class="navbar-brand" href="/"><span>Bookers</span></a>
+		<a class="navbar-brand" href="/" style="font-weight: bold;"><span>toritori</span></a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
 	</button>
@@ -17,15 +17,15 @@
             <li>
 				<%= link_to "New Post", new_post_path, class: "nav-link text-light" %>
             </li>
-            <li>
-				<%= link_to "Log out", destroy_user_session_path, class:"nav-link text-light", method: :delete %>
-            </li>
+			<li>
+				<%= link_to "My Post", posts_path, class: "nav-link text-light" %>
+			</li>
 			<li>
 				<%= link_to "My Profile", user_path(current_user), class: "nav-link text-light" %>
 			</li>
 			<li>
-				<%= link_to "Post Index", posts_path, class: "nav-link text-light" %>
-			</li>
+				<%= link_to "Log out", destroy_user_session_path, class:"nav-link text-light", method: :delete %>
+            </li>
         <% else %>
 
 			
