--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -9,6 +9,9 @@
 	
   <h4>本文</h4>
   <%= f.text_area :text %>
+
+  <h4>画像を選択</h4>
+  <%= f.file_field :images, multiple: true %>
 	
   <%= f.submit '投稿' %>
 <% end %>
