--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -2,8 +2,8 @@
 <p>Find me in app/views/posts/show.html.erb</p>
 
 
-<h2>タイトル</h2>
-<p><%= @post.title %></p>
+<h4><%= link_to @post.text, edit_post_path(@post) %></h4> <!-- ここをリンクに変更 -->
 
-<h2>本文</h2>
-<p><%= @post.text %></p>
+<% @post.images.each do |image| %>
+    <%= image_tag image %>
+  <% end %>
