--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,7 +1,7 @@
 <header>
-	<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+	<nav class="navbar navbar-expand-lg" style="background-color: #5BAD92;">
 	<div class="container">
-		<a class="navbar-brand" href="/" style="font-weight: bold;"><span>toritori</span></a>
+		<a class="navbar-brand" href="/" style="font-weight: bold; color: white;"><span>toritori</span></a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
 	</button>
