--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,7 @@
 
   <body>
   <%= render 'layouts/header' %>
+  <%= render 'layouts/search' %>
   <% if notice %>
     <div class="alert alert-success"><%= notice %></div>
   <% end %>
