--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,7 +1,7 @@
-<footer>
+<footer style="background-color: #5BAD92;">
   <div class='container mt-5'>
     <div class='row'>
-      <div class='mx-auto'>
+      <div class='mx-auto' style="font-weight: bold; color: white;">
         <p>CopyRight Infratop.inc</p>
       </div>
     </div>
