--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -13,6 +13,7 @@
       <% end %>
     <% else %>
     <% end %>
+    <p><%= link_to "#{post.comments.count} コメント", post_path(post.id) %></p>
     <br>
   </div>
 <% end %>
