--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,16 +1,17 @@
-<h1>Homes#top "root</h1>
-<p>Find me in app/views/homes/top.html.erb</p>
-
 <h1>Welcome to the Post Feed</h1>
 
 <% @posts.each do |post| %>
   <div class="post">
     <% if post.user %> 
       <p><strong><%= post.user.name %></strong> が投稿しました：</p>
+      <!-- post.text をクリック可能にして、投稿の show ページに遷移させる -->
+      <p><%= link_to post.text, post_path(post), style: "color: black;" %></p>
     <% else %>
       <p><strong>Already deleted</strong> が投稿しました：</p>
+      <!-- ユーザーが削除されている場合はリンクを表示しない -->
+      <p><%= post.text %></p>
     <% end %>
-    <p><%= post.text %></p>
+
     <% if post.images.attached? %> <!-- 画像が添付されているか確認 -->
       <% post.images.each do |image| %> <!-- 画像をループで表示 -->
         <%= image_tag image %> <!-- 画像を表示 -->
@@ -18,7 +19,8 @@
     <% else %>
       <!-- 画像がない場合のメッセージ -->
     <% end %>
-    <p><%= post.created_at.strftime("%Y-%m-%d %H:%M") %></p>
+    <p><%= link_to "#{post.comments.count} コメント", post_path(post.id), style: "color: black;" %></p>
+    <p><%= post.created_at.in_time_zone('Asia/Tokyo').strftime("%Y-%m-%d %H:%M") %></p>
     <br>
   </div>
 <% end %>
