--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -11,6 +11,7 @@
       <!-- ユーザーが削除されている場合はリンクを表示しない -->
       <p><%= post.text %></p>
     <% end %>
+        <p><%= "#{post.comments.count} コメント" %></p>
 
     <% if post.images.attached? %> <!-- 画像が添付されているか確認 -->
       <% post.images.each do |image| %> <!-- 画像をループで表示 -->
@@ -19,7 +20,7 @@
     <% else %>
       <!-- 画像がない場合のメッセージ -->
     <% end %>
-    <p><%= link_to "#{post.comments.count} コメント", post_path(post.id), style: "color: black;" %></p>
+
     <p><%= post.created_at.in_time_zone('Asia/Tokyo').strftime("%Y-%m-%d %H:%M") %></p>
     <br>
   </div>
