--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -14,8 +14,15 @@
 <div>
   <p>コメント件数：<%= @post.comments.count %></p>
   <% @post.comments.each do |comment| %>
-    <%= comment.user.name %>
-    <%= comment.created_at.strftime('%Y/%m/%d') %><%= comment.comment %>
+    <div class="comment">
+      <p>
+        <strong><%= comment.user.name %></strong> - <%= comment.created_at.strftime('%Y/%m/%d') %>
+        <% if comment.user == current_user %>
+          <%= link_to "削除", post_comment_path(@post, comment), method: :delete, style: "display: inline-block; margin-left: 10px;" %>
+        <% end %>
+      </p>
+      <p><%= comment.comment %></p>
+    </div>
   <% end %>
 </div>
 <div>
