--- a/app/views/admin/homes/top.html.erb
+++ b/app/views/admin/homes/top.html.erb
@@ -1,4 +1,4 @@
-<h1>Admin::Homes#top TT</h1>
+<h1>Admin::Homes#top</h1>
 <p>Find me in app/views/admin/homes/top.html.erb</p>
 
 <!-- app/views/admin/homes/top.html.erb -->
