--- a/app/views/admin/homes/top.html.erb
+++ b/app/views/admin/homes/top.html.erb
@@ -15,7 +15,7 @@
     <% @comments.each do |comment| %>
       <tr>
         <td><%= comment.user.name %></td>  <!-- ユーザー名を表示 -->
-        <td><%= comment.comment %></td>      <!-- コメント内容を表示 -->
+        <td><%= link_to comment.comment, admin_comment_path(comment) %></td> <!-- コメント内容をクリックすると詳細ページへ遷移 -->
         <td><%= comment.created_at.strftime("%Y-%m-%d %H:%M:%S") %></td>  <!-- コメントの投稿日を表示 -->
       </tr>
     <% end %>
