--- a/app/views/admin/comments/show.html.erb
+++ b/app/views/admin/comments/show.html.erb
@@ -1,11 +1,9 @@
-<h1>Admin::Comments#show</h1>
-<p>Find me in app/views/admin/comments/show.html.erb</p>
-
-
 <h1>コメント詳細</h1>
 
-<p><strong>ユーザー名:</strong> <%= @comment.user.name %></p>
-<p><strong>コメント内容:</strong> <%= @comment.comment %></p>
 <p><strong>投稿日時:</strong> <%= @comment.created_at.strftime("%Y-%m-%d %H:%M:%S") %></p>
+<p><strong>投稿タイトル:</strong> <%= @comment.post.text %></p> <!-- コメントが関連する投稿のタイトルを表示 -->
+<p><strong>コメント内容:</strong> <%= @comment.comment %></p>
 
 <%= link_to '戻る', admin_comments_path %>
+
+<%= link_to 'コメント削除', admin_comment_path(@comment), method: :delete, data: { confirm: '本当に削除しますか？' }, class: 'btn btn-danger' %>
