--- a/app/views/admin/homes/top.html.erb
+++ b/app/views/admin/homes/top.html.erb
@@ -7,6 +7,7 @@
   <thead>
     <tr>
       <th>ユーザー名</th>
+      <th>投稿内容</th>  <!-- 投稿タイトルを追加 -->
       <th>コメント内容</th>
       <th>投稿日時</th>
     </tr>
@@ -15,6 +16,7 @@
     <% @comments.each do |comment| %>
       <tr>
         <td><%= comment.user.name %></td>  <!-- ユーザー名を表示 -->
+        <td><%= link_to comment.post.text, admin_post_path(comment.post) %></td> <!-- コメントが関連する投稿タイトルのリンクを追加 -->
         <td><%= link_to comment.comment, admin_comment_path(comment) %></td> <!-- コメント内容をクリックすると詳細ページへ遷移 -->
         <td><%= comment.created_at.strftime("%Y-%m-%d %H:%M:%S") %></td>  <!-- コメントの投稿日を表示 -->
       </tr>
