--- a/app/views/admin/homes/top.html.erb
+++ b/app/views/admin/homes/top.html.erb
@@ -6,10 +6,10 @@
 <table>
   <thead>
     <tr>
-      <th>ユーザー名</th>
-      <th>投稿内容</th>  <!-- 投稿タイトルを追加 -->
-      <th>コメント内容</th>
-      <th>投稿日時</th>
+      <th>コメントユーザー名　</th>
+      <th>投稿内容　</th>  <!-- 投稿タイトルを追加 -->
+      <th>コメント内容　</th>
+      <th>投稿日時　</th>
     </tr>
   </thead>
   <tbody>
