--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -36,7 +36,13 @@
             </li>
           <% elsif admin_signed_in? %> <!-- 管理者がログインしている場合 -->
             <li>
+              <%= link_to "admin top", admin_comments_path, class:"nav-link text-light" %>
+            </li>
+            <li>
               <%= link_to "admin Log out", destroy_admin_session_path, class:"nav-link text-light", method: :delete %>
+            </li>
+            <li>
+              <%= link_to "users", admin_users_path, class: "nav-link text-light" %>
             </li>
           <% else %> <!-- ユーザーがサインインしていない場合 -->
             <li>
