--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -2,6 +2,7 @@
 <p>Find me in app/views/posts/show.html.erb</p>
 
 <% if @post.user == current_user %>  <!-- 投稿者がカレントユーザーの場合のみ表示 -->
+<p>投稿者: <%= link_to @post.user.name, user_path(@post.user) %></p> <!-- クリックでユーザーの詳細ページへ遷移 -->
 <h4><%= link_to @post.text, edit_post_path(@post), style: "color: black;" %></h4> <!-- 編集リンク -->
 <% else %>
   <h4><%= @post.text %></h4> <!-- 編集リンクがない場合、テキストのみ表示 -->
@@ -31,3 +32,10 @@
     <%= f.submit "送信する" %>
   <% end %>
 </div>
+    <!-- 編集ボタン（ログインユーザーが投稿したもののみ表示） -->
+<% if @post.user == current_user %> <!-- 投稿がログインユーザーによって作成されたものである場合 -->
+  <%= link_to '編集', edit_post_path(@post), class: 'btn btn-primary' %> <!-- 編集ボタン -->
+  
+  <!-- 削除ボタン -->
+  <%= link_to '削除', post_path(@post), method: :delete, data: { confirm: '本当に削除しますか？' }, class: 'btn btn-danger' %> <!-- 削除ボタン -->
+<% end %>
