--- a/app/views/homes/about.html.erb
+++ b/app/views/homes/about.html.erb
@@ -1,10 +1,12 @@
-<h1>Homes#about</h1>
-<p>Find me in app/views/homes/about.html.erb</p>
+<h1 class="text-center my-4">Homes#about</h1>
+<p class="text-center">Find me in <code>app/views/homes/about.html.erb</code></p>
 
-<div class='container'>
-    <div class='row'>
-      <h1 class="px-3 mx-auto">Welcome to
-        <strong>Bookers</strong>!
-      </h1>
+<div class="container">
+  <div class="row justify-content-center text-center">
+    <div class="col-md-8">
+      <h2 class="display-4 mb-3">Welcome to <strong>toritori</strong>!</h2>
+      <p class="lead mb-4">可愛らしい鳥の写真を共有してみんなでほっこりしましょう</p>
+      <p class="lead">愛しい小鳥さんを逃してしまったら、コミュニティ機能を使用して捜索を手伝ってくれる方を見つけましょう</p>
     </div>
   </div>
+</div>
