--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,31 +1,37 @@
-<h1>Posts#edit</h1>
-<p>Find me in app/views/posts/edit.html.erb</p>
+<h1 class="text-center my-4">Posts#edit</h1>
+<p class="text-center">Find me in <code>app/views/posts/edit.html.erb</code></p>
 
-<h2>投稿を編集</h2>
+<div class="container">
+  <h2 class="text-center mb-4">投稿を編集</h2>
 
-<%= form_for @post do |f| %>
-  <% if @post.errors.any? %>
-    <div class="error-messages">
-      <ul>
-        <% @post.errors.full_messages.each do |message| %>
-          <li><%= message %></li>
-        <% end %>
-      </ul>
+  <%= form_for @post, html: { class: 'needs-validation', novalidate: true } do |f| %>
+    <% if @post.errors.any? %>
+      <div class="alert alert-danger">
+        <ul>
+          <% @post.errors.full_messages.each do |message| %>
+            <li><%= message %></li>
+          <% end %>
+        </ul>
+      </div>
+    <% end %>
+
+    <div class="form-group">
+      <%= f.label :text, "内容", class: "form-label" %>
+      <%= f.text_area :text, class: "form-control", rows: 5 %>
+    </div>
+
+    <div class="form-group">
+      <h4>画像を選択</h4>
+      <%= f.file_field :images, multiple: true, class: 'form-control-file' %>
+    </div>
+
+    <div class="form-group text-center">
+      <%= f.submit "更新する", class: "btn btn-primary btn-lg" %>
     </div>
   <% end %>
 
-  <div>
-    <%= f.label :text, "内容" %>
-    <%= f.text_area :text %>
+  <div class="text-center mt-3">
+    <%= link_to 'キャンセル', posts_path, class: "btn btn-secondary" %>
+    <%= link_to '削除', post_path(@post), method: :delete, data: { confirm: '本当に削除しますか？' }, class: "btn btn-danger ml-2" %>
   </div>
-
-  <h4>画像を選択</h4>
-  <%= f.file_field :images, multiple: true %>
-
-  <div>
-    <%= f.submit "更新する" %>
-  </div>
-<% end %>
-
-<%= link_to 'キャンセル', posts_path %>
-<%= link_to '削除', post_path(@post), method: :delete, data: { confirm: '本当に削除しますか？' }, class: "delete-link" %>
+</div>
