--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,15 +1,22 @@
-<h1>Posts#new</h1>
-<p>Find me in app/views/posts/new.html.erb</p>
+<h1 class="text-center my-4">新規投稿</h1>
+<p class="text-center">Find me in <code>app/views/posts/new.html.erb</code></p>
 
-<h1>新規投稿</h1>
-<!-- form_with部分 -->
-<%= form_with model: @post do |f| %>
+<div class="container">
+  <%= form_with model: @post, html: { class: 'needs-validation', novalidate: true } do |f| %>
+    
+    <div class="form-group">
+      <h4>本文</h4>
+      <%= f.text_area :text, class: "form-control", rows: 5 %>
+    </div>
 
-	<h4>本文</h4>
-  <%= f.text_area :text %>
+    <div class="form-group">
+      <h4>画像を選択</h4>
+      <%= f.file_field :images, multiple: true, class: 'form-control-file' %>
+    </div>
 
-  <h4>画像を選択</h4>
-  <%= f.file_field :images, multiple: true %>
-	
-  <%= f.submit '投稿' %>
-<% end %>
+    <div class="form-group text-center">
+      <%= f.submit '投稿', class: "btn btn-primary btn-lg" %>
+    </div>
+
+  <% end %>
+</div>
