--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,26 +1,30 @@
-<h1>Users#edit</h1>
-<p>Find me in app/views/users/edit.html.erb</p>
+<h1 class="text-center my-4">Edit Your Profile</h1>
+<p class="text-center">Find me in <code>app/views/users/edit.html.erb</code></p>
 
+<div class="container">
+  <%= form_for @user, html: { class: 'needs-validation', novalidate: true } do |f| %>
+    
+    <div class="form-group">
+      <%= f.label :name, class: 'form-label' %>
+      <%= f.text_field :name, class: 'form-control' %>
+    </div>
 
-<h1>Edit Your Profile</h1>
+    <div class="form-group">
+      <%= f.label :email, class: 'form-label' %>
+      <%= f.email_field :email, class: 'form-control' %>
+    </div>
 
-<%= form_for @user do |f| %>
-  <div>
-    <%= f.label :name %>
-    <%= f.text_field :name %>
+    <div class="form-group text-center">
+      <%= f.submit 'Update Profile', class: 'btn btn-primary btn-lg' %>
+    </div>
+
+  <% end %>
+
+  <div class="text-center mt-3">
+    <%= link_to 'Back', user_path(@user), class: 'btn btn-secondary' %>
   </div>
-  
-  <div>
-    <%= f.label :email %>
-    <%= f.email_field :email %>
+
+  <div class="text-center mt-3">
+    <%= link_to 'Delete Account', user_path(@user), method: :delete, data: { confirm: 'Are you sure you want to delete your account?' }, class: 'btn btn-danger' %>
   </div>
-
-
-  <div>
-    <%= f.submit 'Update Profile' %>
-  </div>
-
-<%= link_to 'Back', user_path(@user), class: 'btn btn-primary' %>
-<% end %>
-
-<%= link_to 'Delete Account', user_path(@user), method: :delete, data: { confirm: 'Are you sure you want to delete your account?' }, class: 'btn btn-danger' %>
+</div>
