--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,25 +1,27 @@
-<h1>Users#index</h1>
-<p>Find me in app/views/users/index.html.erb</p>
+<h1 class="text-center my-4">User List</h1>
+<p class="text-center">Find me in <code>app/views/users/index.html.erb</code></p>
 
-<h1>User List</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Actions</th>
-    </tr>
-  </thead>
-  <tbody>
-    <% @users.each do |user| %>
+<div class="container">
+  <table class="table table-striped">
+    <thead>
       <tr>
-        <td><%= user.name %></td>
-        <td>
-          <%= link_to 'Show', user_path(user) %> 
-        </td>
+        <th scope="col">Name</th>
+        <th scope="col">Actions</th>
       </tr>
-    <% end %>
-  </tbody>
-</table>
+    </thead>
+    <tbody>
+      <% @users.each do |user| %>
+        <tr>
+          <td><%= user.name %></td>
+          <td>
+            <%= link_to 'Show', user_path(user), class: 'btn btn-info btn-sm' %> <!-- 'Show' ボタンを追加 -->
+          </td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
 
-<%= link_to 'Back to Home', root_path %>
+  <div class="text-center mt-3">
+    <%= link_to 'Back to Home', root_path, class: 'btn btn-secondary' %> <!-- 戻るボタン -->
+  </div>
+</div>
