--- a/app/views/admin/homes/top.html.erb
+++ b/app/views/admin/homes/top.html.erb
@@ -1,25 +1,32 @@
-<h1>Admin::Homes#top</h1>
-<p>Find me in app/views/admin/homes/top.html.erb</p>
+<div class="container mt-5">
+  <div class="row">
+    <div class="col-md-12">
+      <h1 class="mb-4">一般ユーザーが投稿したコメント一覧</h1>
+      
+      <!-- 説明文 -->
+      <p>Find me in app/views/admin/homes/top.html.erb</p>
 
-<h1>一般ユーザーが投稿したコメント一覧</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>コメントユーザー名　</th>
-      <th>投稿内容　</th>  <!-- 投稿タイトルを追加 -->
-      <th>コメント内容　</th>
-      <th>投稿日時　</th>
-    </tr>
-  </thead>
-  <tbody>
-    <% @comments.each do |comment| %>
-      <tr>
-        <td><%= comment.user.name %></td>  <!-- ユーザー名を表示 -->
-        <td><%= link_to comment.post.text, admin_post_path(comment.post) %></td> <!-- コメントが関連する投稿タイトルのリンクを追加 -->
-        <td><%= link_to comment.comment, admin_comment_path(comment) %></td> <!-- コメント内容をクリックすると詳細ページへ遷移 -->
-        <td><%= comment.created_at.strftime("%Y-%m-%d %H:%M:%S") %></td>  <!-- コメントの投稿日を表示 -->
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+      <!-- コメント一覧テーブル -->
+      <table class="table table-striped table-bordered">
+        <thead class="thead-dark">
+          <tr>
+            <th>コメントユーザー名</th>
+            <th>投稿内容</th> <!-- 投稿タイトルを追加 -->
+            <th>コメント内容</th>
+            <th>投稿日時</th>
+          </tr>
+        </thead>
+        <tbody>
+          <% @comments.each do |comment| %>
+            <tr>
+              <td><%= comment.user.name %></td>  <!-- ユーザー名を表示 -->
+              <td><%= link_to comment.post.text, admin_post_path(comment.post), class: "text-decoration-none" %></td> <!-- コメントが関連する投稿タイトルのリンクを追加 -->
+              <td><%= link_to comment.comment, admin_comment_path(comment), class: "text-decoration-none" %></td> <!-- コメント内容をクリックすると詳細ページへ遷移 -->
+              <td><%= comment.created_at.strftime("%Y-%m-%d %H:%M:%S") %></td>  <!-- コメントの投稿日を表示 -->
+            </tr>
+          <% end %>
+        </tbody>
+      </table>
+    </div>
+  </div>
+</div>
