--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -1,20 +1,24 @@
-<h1>Admin::Users#index</h1>
-<p>Find me in app/views/admin/users/index.html.erb</p>
+<div class="container mt-4">
+  <p class="text-muted">Find me in app/views/admin/users/index.html.erb</p>
 
-<h1>一般ユーザー一覧</h1>
-<table>
-  <thead>
-    <tr>
-      <th>ユーザー名</th>
-      <th>詳細</th>
-    </tr>
-  </thead>
-  <tbody>
-    <% @users.each do |user| %>
-      <tr>
-        <td><%= user.name %></td> <!-- ユーザー名 -->
-        <td><%= link_to '詳細', admin_user_path(user) %></td> <!-- ユーザー詳細ページへのリンク -->
+  <h1 class="mb-4">一般ユーザー一覧</h1>
+
+  <table class="table table-bordered">
+    <thead>
+      <tr class="bg-dark text-white">
+        <th scope="col">ユーザー名</th>
+        <th scope="col">詳細</th>
       </tr>
-    <% end %>
-  </tbody>
-</table>
+    </thead>
+    <tbody>
+      <% @users.each do |user| %>
+        <tr>
+          <td><%= user.name %></td>
+          <td>
+            <%= link_to '詳細', admin_user_path(user), class: 'btn btn-primary btn-sm' %>
+          </td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
+</div>
