--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,34 +1,39 @@
-<div class='container’>
-  <div class='row’>
-    <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0">
-      <h2>Sign up</h2>
-      <%= form_with model: @user, url: user_registration_path, local: true do |f| %>
-        <%= render "devise/shared/error_messages", resource: resource %>
-        <div class="field">
-          <%= f.label :name %><br />
-          <%= f.text_field :name, autofocus: true, autocomplete: "name" %>
+
+<div class="container vh-100 d-flex justify-content-center align-items-center">
+  <div class="row w-100">
+    <div class="col-sm-12 col-md-8 col-lg-5 mx-auto shadow p-4 rounded bg-white">
+    <h2 class="text-center my-4">Sign up</h2>
+
+      <%= form_for(resource, as: resource_name, url: registration_path(resource_name), class: "needs-validation") do |f| %>
+        <%= render "admin/shared/error_messages", resource: resource %>
+
+        <div class="form-group mb-3">
+          <%= f.label :email, class: "form-label" %>
+          <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "form-control" %>
         </div>
-        <div class="field">
-          <%= f.label :email %><br />
-          <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-        </div>
-        <div class="field">
-          <%= f.label :password %>
+
+        <div class="form-group mb-3">
+          <%= f.label :password, class: "form-label" %>
           <% if @minimum_password_length %>
-          <em>(<%= @minimum_password_length %> characters minimum)</em>
-          <% end %><br />
-          <%= f.password_field :password, autocomplete: "new-password" %>
+            <em class="text-muted">( <%= @minimum_password_length %> characters minimum )</em>
+          <% end %>
+          <%= f.password_field :password, autocomplete: "new-password", class: "form-control" %>
         </div>
-        <div class="field">
-          <%= f.label :password_confirmation %><br />
-          <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
+
+        <div class="form-group mb-3">
+          <%= f.label :password_confirmation, class: "form-label" %>
+          <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "form-control" %>
         </div>
-        <div class="actions">
-          <%= f.submit "Sign up", class: "btn btn-sm btn-success" %>
+
+        <div class="d-grid">
+          <%= f.submit "Sign up", class: "btn btn-primary btn-block" %>
         </div>
       <% end %>
-      <%= render "devise/shared/links" %>
-        <br />
+
+      <div class="text-center mt-3">
+        <%= render "admin/shared/links" %>
       </div>
+
     </div>
   </div>
+</div>
