--- a/app/views/layouts/_search.html.erb
+++ b/app/views/layouts/_search.html.erb
@@ -1,21 +1,20 @@
 <% if user_signed_in? %>
-  <div class="container mt-4">
-    <h3 class="text-center mb-4">検索</h3>
+  <div class="container pt-0">
     <div class="search_form">
       <%= form_with url: search_path, local: true, method: :get do |f| %>
-        <div class="row mb-3">
-          <div class="col-md-4">
+        <div class="d-flex justify-content-end mb-3">
+          <div class="me-3">
             <%= f.text_field :word, class: "form-control", placeholder: "検索キーワード" %>
           </div>
-          <div class="col-md-4">
+          <div class="me-3">
             <%= f.select :range, options_for_select([['User'], ['Post']]), class: "form-control", prompt: "選択してください" %>
           </div>
-          <div class="col-md-4">
+          <div class="me-3">
             <%= f.select :search, options_for_select([["完全一致","perfect_match"], ["前方一致","forward_match"],  ["後方一致","backward_match"], ["部分一致","partial_match"]]), class: "form-control", prompt: "検索方法" %>
           </div>
-        </div>
-        <div class="text-center">
-          <%= f.submit "検索", class: "btn btn-primary btn-sm" %>
+          <div>
+            <%= f.submit "検索", class: "btn btn-primary btn-sm" %>
+          </div>
         </div>
       <% end %>
     </div>
