--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -29,6 +29,9 @@
               <%= link_to "Create Group", new_group_path, class: "nav-link text-light" %>
             </li>
             <li>
+              <%= link_to "All Group", groups_path, class: "nav-link text-light" %>
+            </li>
+            <li>
               <%= link_to "My Group", groups_path, class: "nav-link text-light" %>
             </li>
             <li>
