--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -9,7 +9,7 @@
             <th class="text-center">Image</th>
             <th class="text-center">グループ名</th>
             <th class="text-center">紹介文</th>
-            <% if @group.owner_id == current_user.id %> <!-- カレントユーザーがオーナーの場合のみ表示 -->
+            <% if @group.is_owned_by?(current_user) %>
               <th class="text-center">Actions</th>
             <% end %>
           </tr>
@@ -23,7 +23,7 @@
               <%= @group.name %>
             </td>
             <td><%= @group.detail %></td>
-            <% if @group.owner_id == current_user.id %> <!-- カレントユーザーがオーナーの場合のみ表示 -->
+            <% if @group.is_owned_by?(current_user) %>
               <td class="text-center">
                 <%= link_to 'Edit', edit_group_path(@group), class: "btn btn-sm btn-success" %>
               </td>
@@ -35,12 +35,26 @@
       <!-- ボタン条件 -->
       <div class="text-center mt-4">
         <% if @group.is_owned_by?(current_user) %>
+          <!-- オーナーの場合、ボタンは表示しない -->
         <% elsif @group.includesUser?(current_user) %>
-          <%= link_to 'Leave this group', group_group_users_path(@group), method: :delete, class: "btn btn-sm btn-danger" %>
+          <%= link_to 'Leave this group', group_group_user_path(@group, current_user.group_users.find_by(group_id: @group.id)), method: :delete, class: "btn btn-sm btn-danger" %>
         <% else %>
-          <%= link_to 'Join this group', group_group_users_path(@group), method: :post, class: "btn btn-sm btn-success" %>
+          <%= link_to '参加申請を送る', group_group_users_path(@group), method: :post, class: "btn btn-primary" %>
         <% end %>
       </div>
+
+      <!-- オーナー用: 参加申請中のユーザーリスト -->
+      <% if @group.is_owned_by?(current_user) %>
+        <h4 class="mt-4">参加申請中のユーザー</h4>
+        <ul>
+          <% @group.group_users.applying.each do |group_user| %>
+            <li>
+              <%= group_user.user.name %>
+              <%= link_to '承認', group_group_user_path(@group, group_user), method: :patch, class: "btn btn-sm btn-success" %>
+            </li>
+          <% end %>
+        </ul>
+      <% end %>
 
       <h4 class="mt-4">参加者一覧</h4>
       <ul>
