--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -58,11 +58,18 @@
 <% end %>
 
       <h4 class="mt-4">参加者一覧</h4>
-<ul>
-  <% @group.users.joins(:group_users).where(group_users: { status: :approved }).each do |user| %>
-    <li style="list-style: none;"><%= user.name %></li>
-  <% end %>
-</ul>
+      <ul>
+      <% @group.users.joins(:group_users).where(group_users: { status: :approved }).each do |user| %>
+        <li style="list-style: none;">
+          <%= user.name %>
+          
+          <% if @group.is_owned_by?(current_user) %>
+            <!-- 強制脱退ボタン -->
+            <%= link_to '強制脱退', reject_group_group_user_path(@group, user.group_users.find_by(group_id: @group.id)), method: :delete, class: "btn btn-sm btn-danger" %>
+          <% end %>
+        </li>
+      <% end %>
+    </ul>
     </div>
   </div>
 </div>
